# cnfg

./: AGENTS  Cargo.toml  LICENSE  README.md
cnfg/: Cargo.toml
cnfg-core/: Cargo.toml
cnfg-core/src/: lib.rs
cnfg-derive/: Cargo.toml
cnfg-derive/src/: lib.rs
cnfg-examples/: Cargo.toml
cnfg-examples/src/: lib.rs
cnfg-examples/tests/: manual_impl.rs
cnfg-sources/: Cargo.toml
cnfg-sources/src/: lib.rs
cnfg-validate/: Cargo.toml
cnfg-validate/src/: lib.rs
cnfg/src/: lib.rs
crates/cnfg/: Cargo.toml  README.md
crates/cnfg-derive/: Cargo.toml  README.md
crates/cnfg-derive/src/: lib.rs
crates/cnfg/src/: error.rs  lib.rs  loader.rs  merge.rs  types.rs  util.rs
crates/cnfg/tests/: file_sources.rs  help.rs  nested.rs
examples/tester/: Cargo.toml  config.yaml
examples/tester/src/: main.rs
