[package]
name = "cnfg-derive"
version = "0.1.1"
edition = "2024"
description = "Derive macros for cnfg"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/tommantonclery/cnfg"
homepage = "https://github.com/tommantonclery/cnfg"
documentation = "https://docs.rs/cnfg-derive"
keywords = ["configuration", "derive", "macro"]
categories = ["development-tools::procedural-macro-helpers"]


[lib]
proc-macro = true


[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
darling = "0.20"


# We reference types in the `cnfg` crate at expansion sites (user code brings it in)
